--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -27,6 +27,33 @@
     <string name="signup">Sign Up</string>
     <string name="confirm_password">Confirm Password</string>
 
+    <!-- Complete Profile -->
+    <string name="complete_profile_welcome">Welcome! Let\'s complete your profile:</string>
+    <string name="complete_profile_athlete_or_club">Are you an Athlete or a Club?</string>
+    <string name="athlete">Athlete</string>
+    <string name="club">Club</string>
+    <string name="next">Next</string>
+    <string name="edit">Edit</string>
+    <string name="back">Back</string>
+    <string name="save">Save</string>
+
+    <string name="club_name">Club Name</string>
+    <string name="contact_phone">Contact Phone</string>
+    <string name="contact_email">Contact Email</string>
+    <string name="club_description">Club Description</string>
+
+
+    <string name="complete_profile_club_first_screen_title">Club Basic Info</string>
+    <string name="complete_profile_club_first_screen_message">Let\'s get some basic club information.</string>
+
+    <string name="complete_profile_club_second_screen_title">Club Additional Info</string>
+    <string name="complete_profile_club_second_screen_add_pictures">Let\'s add some club pictures:</string>
+    <string name="complete_profile_club_second_screen_select_pictures">Select pictures</string>
+    <string name="complete_profile_club_second_screen_add_services">Which services does the club offer?</string>
+
+    <string name="complete_profile_club_map_screen_title">Club Location</string>
+    <string name="complete_profile_club_map_screen_complete_profile">Complete Profile</string>
+
 
 
 
