Dependencies and strings for Paging Clubs

--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="signout_error">Sign Out Error</string>
     <string name="error">Error</string>
     <string name="passwordsDoNotMatch_error">Passwords do not match.</string>
+    <string name="clubs_load_error">Error loading Clubs.</string>
 
     <!-- Login -->
     <string name="login_welcome_message">Welcome back!</string>
