--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -35,11 +35,6 @@
 
     <string name="athlete">Athlete</string>
     <string name="club">Club</string>
-    <string name="next">Next</string>
-    <string name="edit">Edit</string>
-    <string name="back">Back</string>
-    <string name="save">Save</string>
-    <string name="name">Name</string>
 
     <string name="club_name">Club Name</string>
     <string name="contact_phone">Contact Phone</string>
@@ -65,6 +60,11 @@
     <!-- Club Detail -->
     <string name="club_detail_screen_title">Club Detail</string>
     <string name="club_detail_from_your_location">from your location</string>
+    <string name="edit_profile">Edit Profile</string>
+    <string name="rating">Rating</string>
+    <string name="delete_image">Delete image</string>
+    <string name="replace_image">Replace Image</string>
+
 
     <!-- Filters -->
     <string name="filter_by">Filter by:</string>
@@ -72,5 +72,18 @@
     <string name="location">Location</string>
     <string name="sports">Sports</string>
     <string name="apply_filters">Apply filters</string>
+
+    <!-- Settings -->
+    <string name="settings">Settings</string>
+
+    <!-- Others -->
+    <string name="unknown">Unknown</string>
+    <string name="next">Next</string>
+    <string name="edit">Edit</string>
+    <string name="back">Back</string>
+    <string name="save">Save</string>
+    <string name="name">Name</string>
+    <string name="cancel">Cancel</string>
+    <string name="apply_changes">Apply changes</string>
 
 </resources>
