Club detail minor changes

--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -64,6 +64,8 @@
     <string name="rating">Rating</string>
     <string name="delete_image">Delete image</string>
     <string name="replace_image">Replace Image</string>
+    <string name="my_club">My Club</string>
+
 
 
     <!-- Filters -->
