--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="error">Error</string>
     <string name="passwordsDoNotMatch_error">Passwords do not match.</string>
     <string name="clubs_load_error">Error loading Clubs.</string>
+    <string name="create_post_error">Error Creating Post.</string>
 
     <!-- Login -->
     <string name="login_welcome_message">Welcome back!</string>
@@ -66,8 +67,6 @@
     <string name="replace_image">Replace Image</string>
     <string name="my_club">My Club</string>
 
-
-
     <!-- Filters -->
     <string name="filter_by">Filter by:</string>
     <string name="sort">Sort</string>
@@ -77,6 +76,11 @@
 
     <!-- Settings -->
     <string name="settings">Settings</string>
+
+    <!-- Post -->
+    <string name="post_title">Post title</string>
+    <string name="post_content">Post Content</string>
+    <string name="create_post">Create Post</string>
 
     <!-- Others -->
     <string name="unknown">Unknown</string>
