--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -66,6 +66,7 @@
     <string name="delete_image">Delete image</string>
     <string name="replace_image">Replace Image</string>
     <string name="my_club">My Club</string>
+    <string name="no_club_posts">This club has no posts yet.</string>
 
     <!-- Filters -->
     <string name="filter_by">Filter by:</string>
@@ -81,6 +82,9 @@
     <string name="post_title">Post title</string>
     <string name="post_content">Post Content</string>
     <string name="create_post">Create Post</string>
+    <string name="edit_post">Edit Post</string>
+    <string name="delete_post">Delete Post</string>
+    <string name="confirm_delete_post">Are you sure you want to delete this post</string>
 
     <!-- Others -->
     <string name="unknown">Unknown</string>
@@ -91,5 +95,6 @@
     <string name="name">Name</string>
     <string name="cancel">Cancel</string>
     <string name="apply_changes">Apply changes</string>
+    <string name="will_be_deleted">will be deleted</string>
 
 </resources>
