--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -89,6 +89,15 @@
     <string name="delete_post">Delete Post</string>
     <string name="confirm_delete_post">Are you sure you want to delete this post</string>
 
+    <!-- Chat -->
+    <string name="type_message">Type your message</string>
+    <string name="send_button">Send button</string>
+    <string name="delete_chat">Delete this chat</string>
+    <string name="delete_chat_confirmation_title">Delete this chat</string>
+    <string name="delete_chat_confirmation_message">
+        This chat will be deleted only for you, the other user will still be able to see the messages.
+    </string>
+
     <!-- Others -->
     <string name="unknown">Unknown</string>
     <string name="next">Next</string>
