--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="passwordsDoNotMatch_error">Passwords do not match.</string>
     <string name="clubs_load_error">Error loading Clubs.</string>
     <string name="create_post_error">Error Creating Post.</string>
+    <string name="error_creating_review">Error creating Review</string>
 
     <!-- Login -->
     <string name="login_welcome_message">Welcome back!</string>
@@ -97,6 +98,12 @@
     <string name="confirm_delete_post">Are you sure you want to delete this post</string>
 
     <string name="find_clubs">Find Clubs</string>
+
+    <!-- Reviews -->
+    <string name="your_club_has_no_reviews">Your club has no reviews</string>
+    <string name="club_has_no_reviews">This club has no reviews</string>
+    <string name="comment">Comment</string>
+    <string name="create_review">Create Review</string>
 
     <!-- Chat -->
     <string name="type_message">Type your message</string>
