Chats Handle errors

--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="edit_post_error">Error editing Post.</string>
     <string name="create_post_error">Error creating Post.</string>
     <string name="load_profile_error">Error loading Profile.</string>
+    <string name="load_chats_error">Error loading Chats.</string>
     <string name="try_again">Try Again</string>
 
     <!-- Login -->
